# iotivity-lite

./: .gitignore
api/: oc_blockwise.c  oc_ri.c
include/: oc_blockwise.h  oc_client_state.h  oc_obt.h
messaging/coap/: coap.c  engine.c
onboarding_tool/: obtmain.c
port/esp32/builder/iotivity/: CMakeLists.txt
security/: oc_obt.c
